fix: fixed Blurred Booking Options Accessible

--- a/packages/portal/src/app/shared/booking-form/booking-form.component.scss
+++ b/packages/portal/src/app/shared/booking-form/booking-form.component.scss
@@ -109,6 +109,7 @@
 
 .filter-blur {
   filter: blur(5px);
+  pointer-events: none;
 }
 
 .login-container {
